# scribe-ai

./: .gitignore  README.md  index.html  main.py  pyproject.toml
app/core/: config.py  llm.py
app/database/: blob.py  mongo.py  schema_setup.py
app/notifications/: __init__.py  routes.py  schemas.py  services.py
app/rag/: routes.py  schemas.py  utils.py
app/sessions/: routes.py  schemas.py  utils.py
app/transcription/: routes.py  schemas.py  utils.py
personal_docs/: Daily Updates.docx  commands.md  mongovector.ipynb  ~WRL0347.tmp  ~WRL2825.tmp
prompts/: prompts.py
scripts/: fs.py
