[project]
name = "scribe-ai"
version = "0.1.0"
description = "Real-time voice-to-note AI scribe"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sounddevice",
    "numpy",
    "pydantic",
    "pymongo",
    "azure-storage-blob",
    "python-dotenv",
    "pydantic-settings",
    "openai",
    "jsonschema",
    "aiohttp"
]

[project.optional-dependencies]
dev = [
    "black", #black is a code formatter
    "ruff",  #ruff will make sure to check for unused imports, unused variables, etc.
    "pytest" #pytest is a testing framework
]

[tool.uv]
virtualenvs.in-project = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"] #E: errors, F: warnings, I: info

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
