[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe-ai"
version = "0.1.0"
description = "Real-time voice-to-note AI scribe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sounddevice",
    "numpy",
    "pydantic",
    "pymongo",
    "azure-storage-blob",
    "python-dotenv",
    "pydantic-settings",
    "openai",
    "jsonschema",
    "aiohttp",
    "twilio",
    "ngrok",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "prompts", "personal_docs"]
exclude = ["tests*"]

# If your packages include non-.py files, list them here:
[tool.setuptools.package-data]
app = ["**/*.txt", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.md"]
prompts = ["**/*.txt", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.md"]
personal_docs = ["**/*.txt", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.md"]

[tool.uv]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
